project structure final, not that functional :poop:

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -32,9 +32,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/emil/Desktop/secret-runway-detection/.venv/lib/python3.12/site-packages/ee/deprecation.py:207: DeprecationWarning: \n",
+      "\n",
+      "Attention required for COPERNICUS/S2_SR! You are using a deprecated asset.\n",
+      "To ensure continued functionality, please update it.\n",
+      "Learn more: https://developers.google.com/earth-engine/datasets/catalog/COPERNICUS_S2_SR\n",
+      "\n",
+      "  warnings.warn(warning, category=DeprecationWarning)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -73,7 +86,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_67ce59592aa50f035c75b9cf4cb122e7 {\n",
+       "                #map_1320a5b71fa2c37c5bd74c0e7684fce8 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -87,14 +100,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_67ce59592aa50f035c75b9cf4cb122e7&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_1320a5b71fa2c37c5bd74c0e7684fce8&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_67ce59592aa50f035c75b9cf4cb122e7 = L.map(\n",
-       "                &quot;map_67ce59592aa50f035c75b9cf4cb122e7&quot;,\n",
+       "            var map_1320a5b71fa2c37c5bd74c0e7684fce8 = L.map(\n",
+       "                &quot;map_1320a5b71fa2c37c5bd74c0e7684fce8&quot;,\n",
        "                {\n",
        "                    center: [-13.129047586991994, -70.0849072195141],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -108,73 +121,73 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_3edf7058551a95fbfd33aa26d9e253c8 = L.tileLayer(\n",
+       "            var tile_layer_f362e002cc1a156ed78088bfc518aaeb = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 19, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_3edf7058551a95fbfd33aa26d9e253c8.addTo(map_67ce59592aa50f035c75b9cf4cb122e7);\n",
+       "            tile_layer_f362e002cc1a156ed78088bfc518aaeb.addTo(map_1320a5b71fa2c37c5bd74c0e7684fce8);\n",
        "        \n",
        "    \n",
-       "            var tile_layer_01035355f95e2c4fe8481a859676e3bc = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1/projects/464231190888/maps/bd2fee44bf73727536e1716157fc7da3-abab62b3a3ec320baa7dea324e8fd72d/tiles/{z}/{x}/{y}&quot;,\n",
+       "            var tile_layer_93c1cdc61bad35d0c2d3b93effd8db9d = L.tileLayer(\n",
+       "                &quot;https://earthengine.googleapis.com/v1/projects/464231190888/maps/76c2fc81929df66f73135073ebf5d58e-161f2d14d0dde3ca58b65368f2a03571/tiles/{z}/{x}/{y}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_01035355f95e2c4fe8481a859676e3bc.addTo(map_67ce59592aa50f035c75b9cf4cb122e7);\n",
+       "            tile_layer_93c1cdc61bad35d0c2d3b93effd8db9d.addTo(map_1320a5b71fa2c37c5bd74c0e7684fce8);\n",
        "        \n",
        "    \n",
-       "        function geo_json_37a5949d3283141a4ea1e066767a01b5_styler(feature) {\n",
+       "        function geo_json_7c904aba60b12aa56492e94bd15afa52_styler(feature) {\n",
        "            switch(feature.id) {\n",
        "                default:\n",
        "                    return {&quot;color&quot;: &quot;red&quot;, &quot;weight&quot;: 2};\n",
        "            }\n",
        "        }\n",
        "\n",
-       "        function geo_json_37a5949d3283141a4ea1e066767a01b5_onEachFeature(feature, layer) {\n",
+       "        function geo_json_7c904aba60b12aa56492e94bd15afa52_onEachFeature(feature, layer) {\n",
        "            layer.on({\n",
        "            });\n",
        "        };\n",
-       "        var geo_json_37a5949d3283141a4ea1e066767a01b5 = L.geoJson(null, {\n",
-       "                onEachFeature: geo_json_37a5949d3283141a4ea1e066767a01b5_onEachFeature,\n",
+       "        var geo_json_7c904aba60b12aa56492e94bd15afa52 = L.geoJson(null, {\n",
+       "                onEachFeature: geo_json_7c904aba60b12aa56492e94bd15afa52_onEachFeature,\n",
        "            \n",
-       "                style: geo_json_37a5949d3283141a4ea1e066767a01b5_styler,\n",
+       "                style: geo_json_7c904aba60b12aa56492e94bd15afa52_styler,\n",
        "        });\n",
        "\n",
-       "        function geo_json_37a5949d3283141a4ea1e066767a01b5_add (data) {\n",
-       "            geo_json_37a5949d3283141a4ea1e066767a01b5\n",
+       "        function geo_json_7c904aba60b12aa56492e94bd15afa52_add (data) {\n",
+       "            geo_json_7c904aba60b12aa56492e94bd15afa52\n",
        "                .addData(data);\n",
        "        }\n",
-       "            geo_json_37a5949d3283141a4ea1e066767a01b5_add({&quot;features&quot;: [{&quot;geometry&quot;: {&quot;coordinates&quot;: [[-70.08928656863503, -13.129844039931504], [-70.08052787039317, -13.128251134052485], [-70.08052787039317, -13.128251134052485]], &quot;type&quot;: &quot;LineString&quot;}, &quot;id&quot;: &quot;0&quot;, &quot;type&quot;: &quot;Feature&quot;}], &quot;type&quot;: &quot;FeatureCollection&quot;});\n",
+       "            geo_json_7c904aba60b12aa56492e94bd15afa52_add({&quot;features&quot;: [{&quot;geometry&quot;: {&quot;coordinates&quot;: [[-70.08928656863503, -13.129844039931504], [-70.08052787039317, -13.128251134052485], [-70.08052787039317, -13.128251134052485]], &quot;type&quot;: &quot;LineString&quot;}, &quot;id&quot;: &quot;0&quot;, &quot;type&quot;: &quot;Feature&quot;}], &quot;type&quot;: &quot;FeatureCollection&quot;});\n",
        "\n",
        "        \n",
        "    \n",
-       "            geo_json_37a5949d3283141a4ea1e066767a01b5.addTo(map_67ce59592aa50f035c75b9cf4cb122e7);\n",
+       "            geo_json_7c904aba60b12aa56492e94bd15afa52.addTo(map_1320a5b71fa2c37c5bd74c0e7684fce8);\n",
        "        \n",
        "    \n",
-       "            var layer_control_e86cc563a57ee39730bab95e4ab770a6_layers = {\n",
+       "            var layer_control_7cb4ba6859d50fd11c501739164a2d80_layers = {\n",
        "                base_layers : {\n",
-       "                    &quot;openstreetmap&quot; : tile_layer_3edf7058551a95fbfd33aa26d9e253c8,\n",
+       "                    &quot;openstreetmap&quot; : tile_layer_f362e002cc1a156ed78088bfc518aaeb,\n",
        "                },\n",
        "                overlays :  {\n",
-       "                    &quot;Sentinel-2&quot; : tile_layer_01035355f95e2c4fe8481a859676e3bc,\n",
-       "                    &quot;Runway&quot; : geo_json_37a5949d3283141a4ea1e066767a01b5,\n",
+       "                    &quot;Sentinel-2&quot; : tile_layer_93c1cdc61bad35d0c2d3b93effd8db9d,\n",
+       "                    &quot;Runway&quot; : geo_json_7c904aba60b12aa56492e94bd15afa52,\n",
        "                },\n",
        "            };\n",
-       "            let layer_control_e86cc563a57ee39730bab95e4ab770a6 = L.control.layers(\n",
-       "                layer_control_e86cc563a57ee39730bab95e4ab770a6_layers.base_layers,\n",
-       "                layer_control_e86cc563a57ee39730bab95e4ab770a6_layers.overlays,\n",
+       "            let layer_control_7cb4ba6859d50fd11c501739164a2d80 = L.control.layers(\n",
+       "                layer_control_7cb4ba6859d50fd11c501739164a2d80_layers.base_layers,\n",
+       "                layer_control_7cb4ba6859d50fd11c501739164a2d80_layers.overlays,\n",
        "                {&quot;autoZIndex&quot;: true, &quot;collapsed&quot;: true, &quot;position&quot;: &quot;topright&quot;}\n",
-       "            ).addTo(map_67ce59592aa50f035c75b9cf4cb122e7);\n",
+       "            ).addTo(map_1320a5b71fa2c37c5bd74c0e7684fce8);\n",
        "\n",
        "        \n",
        "&lt;/script&gt;\n",
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x7482c3b9aa90>"
+       "<folium.folium.Map at 0x77ffe46d48c0>"
       ]
      },
      "metadata": {},
@@ -192,7 +205,7 @@
     "ee.Initialize()\n",
     "\n",
     "# Load the runway shapefile\n",
-    "shapefile_path = 'pac_2024_training/pac_2024_training.shp'\n",
+    "shapefile_path = '../pac_2024_training/pac_2024_training.shp'\n",
     "gdf = gpd.read_file(shapefile_path)\n",
     "\n",
     "# Ensure CRS is WGS84\n",
@@ -839,7 +852,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -853,7 +866,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
