✨ Loading AOI images working

--- a/notebooks/eyeball_validate_train_utils.ipynb
+++ b/notebooks/eyeball_validate_train_utils.ipynb
@@ -841,7 +841,7 @@
    ],
    "source": [
     "# %%\n",
-    "def plot_satellite_with_tensor_grid(satellite_image: np.ndarray, has_strip_tensor: torch.Tensor, tiles_per_area_len: int):\n",
+    "def plot_satellite_with_tensor_grid(satellite_image: np.ndarray, has_strip_tensor: torch.Tensor):\n",
     "    \"\"\"\n",
     "    Plots the satellite image with a grid overlay indicating landing strip presence.\n",
     "\n",
