--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -49,18 +49,11 @@
     "import ee\n",
     "import wandb\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import geopandas as gpd\n",
-    "import pyproj\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "from torchvision import transforms\n",
+    "from torch.utils.data import DataLoader\n",
     "import timm  # PyTorch Image Models library\n",
-    "from shapely.geometry import Polygon, Point\n",
-    "import matplotlib.pyplot as plt\n",
-    "import tqdm.notebook as tqdm\n",
     "import logging\n",
     "from pathlib import Path\n",
     "\n",
@@ -69,18 +62,16 @@
     "\n",
     "# Import functions and constants from train_utils\n",
     "from secret_runway_detection.train_utils import (\n",
-    "    landing_strips_to_enclosing_input_areas,\n",
-    "    input_area_to_input_image,\n",
-    "    input_area_to_has_strip_tensor,\n",
-    "    get_time_period_of_strips_on_area,\n",
-    "    TILE_SIDE_LEN,\n",
     "    TILES_PER_AREA_LEN,\n",
-    "    INPUT_IMAGE_HEIGHT,\n",
-    "    INPUT_IMAGE_WIDTH,\n",
     "    RANDOM_SEED\n",
     ")\n",
     "\n",
-    "from secret_runway_detection.dataset import LandingStripDataset\n"
+    "from secret_runway_detection.dataset import LandingStripDataset\n",
+    "\n",
+    "from secret_runway_detection.model import (\n",
+    "    SegmentationHead,\n",
+    "    CombinedModel,\n",
+    ")\n"
    ]
   },
   {
@@ -285,80 +276,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class SegmentationHead(nn.Module):\n",
-    "    def __init__(self, embedding_dim=1024, output_size=TILES_PER_AREA_LEN):\n",
-    "        super(SegmentationHead, self).__init__()\n",
-    "        self.output_size = output_size\n",
-    "        self.initial_grid_size = 5  # Starting grid size (adjustable)\n",
-    "        self.num_channels = 256     # Number of feature channels (adjustable)\n",
-    "\n",
-    "        # Fully connected layer to map embedding to initial grid\n",
-    "        self.fc = nn.Linear(embedding_dim, self.num_channels * self.initial_grid_size * self.initial_grid_size)\n",
-    "\n",
-    "        # Decoder layers to upsample to output_size\n",
-    "        self.decoder = nn.Sequential(\n",
-    "            nn.ConvTranspose2d(self.num_channels, 128, kernel_size=4, stride=2, padding=1),  # Upsample x2\n",
-    "            nn.BatchNorm2d(128),\n",
-    "            nn.ReLU(inplace=True),\n",
-    "            nn.ConvTranspose2d(128, 64, kernel_size=4, stride=2, padding=1),                # Upsample x2\n",
-    "            nn.BatchNorm2d(64),\n",
-    "            nn.ReLU(inplace=True),\n",
-    "            nn.ConvTranspose2d(64, 32, kernel_size=4, stride=2, padding=1),                 # Upsample x2\n",
-    "            nn.BatchNorm2d(32),\n",
-    "            nn.ReLU(inplace=True),\n",
-    "            nn.ConvTranspose2d(32, 16, kernel_size=4, stride=2, padding=1),                 # Upsample x2\n",
-    "            nn.BatchNorm2d(16),\n",
-    "            nn.ReLU(inplace=True),\n",
-    "            nn.ConvTranspose2d(16, 8, kernel_size=4, stride=2, padding=1),                  # Upsample x2\n",
-    "            nn.BatchNorm2d(8),\n",
-    "            nn.ReLU(inplace=True),\n",
-    "            nn.ConvTranspose2d(8, 1, kernel_size=3, stride=1, padding=1),                   # Upsample x1\n",
-    "            nn.Sigmoid(),\n",
-    "        )\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        # x: (batch_size, embedding_dim)\n",
-    "        x = self.fc(x)  # (batch_size, num_channels * initial_grid_size * initial_grid_size)\n",
-    "        x = x.view(-1, self.num_channels, self.initial_grid_size, self.initial_grid_size)\n",
-    "        x = self.decoder(x)  # (batch_size, 1, H, W), where H and W should be close to output_size\n",
-    "\n",
-    "        # If the output size is not exactly 200x200, interpolate\n",
-    "        x = nn.functional.interpolate(x, size=(self.output_size, self.output_size), mode='bilinear', align_corners=False)\n",
-    "        return x  # (batch_size, 1, output_size, output_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class CombinedModel(nn.Module):\n",
-    "    def __init__(self, backbone, segmentation_head):\n",
-    "        super(CombinedModel, self).__init__()\n",
-    "        self.backbone = backbone\n",
-    "        self.segmentation_head = segmentation_head\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        # Pass input through backbone to get embedding\n",
-    "        x = self.backbone(x)  # Output shape: (batch_size, embedding_dim)\n",
-    "        x = self.segmentation_head(x)\n",
-    "        return x\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "segmentation_head = SegmentationHead()\n",
     "\n",
     "model = CombinedModel(backbone_model, segmentation_head)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken for forward pass: 0.39 seconds\n",
+      "torch.Size([200, 200])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Time one forward pass\n",
+    "import time\n",
+    "start_time = time.time()\n",
+    "\n",
+    "model(dataset[0][0].unsqueeze(0))\n",
+    "\n",
+    "print(f\"Time taken for forward pass: {time.time() - start_time:.2f} seconds\")\n",
+    "print(dataset[0][1].shape)\n"
    ]
   },
   {
