--- a/notebooks/etl_test_AOIs.ipynb
+++ b/notebooks/etl_test_AOIs.ipynb
@@ -67,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "966da311c316400eaa24c477cd05c122",
+       "model_id": "420b6f06adec4d97980f7cf1f0e7120c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -84,103 +84,7 @@
      "text": [
       "\n",
       "Processing AOI: aoi_2021_04\n",
-      "  Using image dates from 2021-01-01 to 2021-12-31\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2021_04_mosaic_quarter_1.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2021_04_mosaic_quarter_2.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2021_04_mosaic_quarter_3.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2021_04_mosaic_quarter_4.tif\n",
-      "Mosaic image saved to ../aoi_mosaic_images/aoi_2021_04_mosaic.tif\n",
-      "Mosaic image saved at: ../aoi_mosaic_images/aoi_2021_04_mosaic.tif\n",
-      "\n",
-      "Processing AOI: aoi_2022_01\n",
-      "  Using image dates from 2022-01-01 to 2022-12-31\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2022_01_mosaic_quarter_1.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2022_01_mosaic_quarter_2.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2022_01_mosaic_quarter_3.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2022_01_mosaic_quarter_4.tif\n",
-      "Mosaic image saved to ../aoi_mosaic_images/aoi_2022_01_mosaic.tif\n",
-      "Mosaic image saved at: ../aoi_mosaic_images/aoi_2022_01_mosaic.tif\n",
-      "\n",
-      "Processing AOI: aoi_2024_01\n",
-      "  Using image dates from 2024-01-01 to 2024-12-31\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2024_01_mosaic_quarter_1.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2024_01_mosaic_quarter_2.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2024_01_mosaic_quarter_3.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2024_01_mosaic_quarter_4.tif\n",
-      "Mosaic image saved to ../aoi_mosaic_images/aoi_2024_01_mosaic.tif\n",
-      "Mosaic image saved at: ../aoi_mosaic_images/aoi_2024_01_mosaic.tif\n",
-      "\n",
-      "Processing AOI: aoi_2020_02\n",
-      "  Using image dates from 2020-01-01 to 2020-12-31\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2020_02_mosaic_quarter_1.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2020_02_mosaic_quarter_2.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2020_02_mosaic_quarter_3.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2020_02_mosaic_quarter_4.tif\n",
-      "Mosaic image saved to ../aoi_mosaic_images/aoi_2020_02_mosaic.tif\n",
-      "Mosaic image saved at: ../aoi_mosaic_images/aoi_2020_02_mosaic.tif\n",
-      "\n",
-      "Processing AOI: aoi_2021_01\n",
-      "  Using image dates from 2021-01-01 to 2021-12-31\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2021_01_mosaic_quarter_1.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2021_01_mosaic_quarter_2.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2021_01_mosaic_quarter_3.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2021_01_mosaic_quarter_4.tif\n",
-      "Mosaic image saved to ../aoi_mosaic_images/aoi_2021_01_mosaic.tif\n",
-      "Mosaic image saved at: ../aoi_mosaic_images/aoi_2021_01_mosaic.tif\n",
-      "\n",
-      "Processing AOI: aoi_2020_03\n",
-      "  Using image dates from 2020-01-01 to 2020-12-31\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2020_03_mosaic_quarter_1.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2020_03_mosaic_quarter_2.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2020_03_mosaic_quarter_3.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2020_03_mosaic_quarter_4.tif\n",
-      "Mosaic image saved to ../aoi_mosaic_images/aoi_2020_03_mosaic.tif\n",
-      "Mosaic image saved at: ../aoi_mosaic_images/aoi_2020_03_mosaic.tif\n",
-      "\n",
-      "Processing AOI: aoi_2020_01\n",
-      "  Using image dates from 2020-01-01 to 2020-12-31\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2020_01_mosaic_quarter_1.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2020_01_mosaic_quarter_2.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2020_01_mosaic_quarter_3.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2020_01_mosaic_quarter_4.tif\n",
-      "Mosaic image saved to ../aoi_mosaic_images/aoi_2020_01_mosaic.tif\n",
-      "Mosaic image saved at: ../aoi_mosaic_images/aoi_2020_01_mosaic.tif\n",
-      "\n",
-      "Processing AOI: aoi_2022_02\n",
-      "  Using image dates from 2022-01-01 to 2022-12-31\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2022_02_mosaic_quarter_1.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2022_02_mosaic_quarter_2.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2022_02_mosaic_quarter_3.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2022_02_mosaic_quarter_4.tif\n",
-      "Mosaic image saved to ../aoi_mosaic_images/aoi_2022_02_mosaic.tif\n",
-      "Mosaic image saved at: ../aoi_mosaic_images/aoi_2022_02_mosaic.tif\n",
-      "\n",
-      "Processing AOI: aoi_2023_01\n",
-      "  Using image dates from 2023-01-01 to 2023-12-31\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2023_01_mosaic_quarter_1.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2023_01_mosaic_quarter_2.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2023_01_mosaic_quarter_3.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2023_01_mosaic_quarter_4.tif\n",
-      "Mosaic image saved to ../aoi_mosaic_images/aoi_2023_01_mosaic.tif\n",
-      "Mosaic image saved at: ../aoi_mosaic_images/aoi_2023_01_mosaic.tif\n",
-      "\n",
-      "Processing AOI: aoi_2021_03\n",
-      "  Using image dates from 2021-01-01 to 2021-12-31\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2021_03_mosaic_quarter_1.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2021_03_mosaic_quarter_2.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2021_03_mosaic_quarter_3.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2021_03_mosaic_quarter_4.tif\n",
-      "Mosaic image saved to ../aoi_mosaic_images/aoi_2021_03_mosaic.tif\n",
-      "Mosaic image saved at: ../aoi_mosaic_images/aoi_2021_03_mosaic.tif\n",
-      "\n",
-      "Processing AOI: aoi_2021_02\n",
-      "  Using image dates from 2021-01-01 to 2021-12-31\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2021_02_mosaic_quarter_1.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2021_02_mosaic_quarter_2.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2021_02_mosaic_quarter_3.tif\n",
-      "Image saved to ../aoi_mosaic_images/aoi_2021_02_mosaic_quarter_4.tif\n",
-      "Mosaic image saved to ../aoi_mosaic_images/aoi_2021_02_mosaic.tif\n",
-      "Mosaic image saved at: ../aoi_mosaic_images/aoi_2021_02_mosaic.tif\n"
+      "  Using image dates from 2021-01-01 to 2021-12-31\n"
      ]
     }
    ],
