--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -42,7 +42,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%\n",
     "import sys\n",
     "import os\n",
     "import random\n",
@@ -66,12 +65,12 @@
     "    RANDOM_SEED\n",
     ")\n",
     "\n",
-    "from secret_runway_detection.dataset import LandingStripDataset\n",
+    "from secret_runway_detection.dataset import LandingStripDataset, SegmentationTransform\n",
     "\n",
     "from secret_runway_detection.model import (\n",
     "    SegmentationHead,\n",
     "    CombinedModel,\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -131,7 +130,7 @@
     "DEBUG = True\n",
     "\n",
     "# Number of epochs to train for\n",
-    "NUM_EPOCHS = 10  # Adjust as needed\n",
+    "NUM_EPOCHS = 10 if not DEBUG else 1  # Adjust as needed\n",
     "\n",
     "# Device configuration\n",
     "device = torch.device('cpu') if DEBUG else torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
@@ -164,14 +163,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset size: 9 samples\n"
+      "Dataset size: 10 samples\n"
      ]
     }
    ],
@@ -180,18 +179,19 @@
     "images_dir = Path('../training_data/images')\n",
     "labels_dir = Path('../training_data/labels')\n",
     "\n",
-    "# # Optionally, define transformations\n",
-    "# transform = transforms.Compose([\n",
-    "#     transforms.Normalize(mean=[0.485, 0.456, 0.406],  # Standard ImageNet normalization\n",
-    "#                          std=[0.229, 0.224, 0.225])\n",
-    "# ])\n",
+    "# Define the segmentation transform\n",
+    "segmentation_transform = SegmentationTransform()\n",
     "\n",
     "# Create the dataset\n",
-    "dataset = LandingStripDataset(images_dir, labels_dir)\n",
+    "dataset = LandingStripDataset(images_dir=images_dir, labels_dir=labels_dir, transform=segmentation_transform)\n",
+    "\n",
+    "if DEBUG:\n",
+    "    dataset.samples = dataset.samples[:10]\n",
+    "    \n",
     "print(f\"Dataset size: {len(dataset)} samples\")\n",
     "\n",
     "# Create DataLoader\n",
-    "dataloader = DataLoader(dataset, batch_size=4, shuffle=True)\n"
+    "dataloader = DataLoader(dataset, batch_size=4, shuffle=True)"
    ]
   },
   {
@@ -203,14 +203,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_311594/2527543172.py:16: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/tmp/ipykernel_2063618/2527543172.py:16: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  checkpoint = torch.load(model_path, map_location='cpu')\n"
      ]
     },
@@ -276,38 +276,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "segmentation_head = SegmentationHead()\n",
     "\n",
     "model = CombinedModel(backbone_model, segmentation_head)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time taken for forward pass: 0.39 seconds\n",
-      "torch.Size([200, 200])\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Time one forward pass\n",
-    "import time\n",
-    "start_time = time.time()\n",
-    "\n",
-    "model(dataset[0][0].unsqueeze(0))\n",
-    "\n",
-    "print(f\"Time taken for forward pass: {time.time() - start_time:.2f} seconds\")\n",
-    "print(dataset[0][1].shape)\n"
    ]
   },
   {
@@ -319,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,33 +315,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 1, Batch 3] Loss: 0.2594\n",
+      "[Epoch 1, Batch 3] Loss: 0.2636\n",
       "Epoch 1 completed. Learning Rate: 0.0001\n",
-      "[Epoch 2, Batch 3] Loss: 0.2598\n",
-      "Epoch 2 completed. Learning Rate: 0.0001\n",
-      "[Epoch 3, Batch 3] Loss: 0.2570\n",
-      "Epoch 3 completed. Learning Rate: 0.0001\n",
-      "[Epoch 4, Batch 3] Loss: 0.2569\n",
-      "Epoch 4 completed. Learning Rate: 0.0001\n",
-      "[Epoch 5, Batch 3] Loss: 0.2561\n",
-      "Epoch 5 completed. Learning Rate: 0.0001\n",
-      "[Epoch 6, Batch 3] Loss: 0.2540\n",
-      "Epoch 6 completed. Learning Rate: 0.0001\n",
-      "[Epoch 7, Batch 3] Loss: 0.2553\n",
-      "Epoch 7 completed. Learning Rate: 1e-05\n",
-      "[Epoch 8, Batch 3] Loss: 0.2537\n",
-      "Epoch 8 completed. Learning Rate: 1e-05\n",
-      "[Epoch 9, Batch 3] Loss: 0.2527\n",
-      "Epoch 9 completed. Learning Rate: 1e-05\n",
-      "[Epoch 10, Batch 3] Loss: 0.2528\n",
-      "Epoch 10 completed. Learning Rate: 1e-05\n",
       "Training complete.\n"
      ]
     }
@@ -421,14 +378,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model saved to 'trained_model.pth'.\n"
+      "Model saved to '../checkpoints/trained_model.pth'.\n"
      ]
     }
    ],
@@ -448,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +421,7 @@
       "- **Optimizer**: Adam with learning rate scheduler.\n",
       "- **Logging**: Weights & Biases (wandb) for experiment tracking.\n",
       "- **Device**: cpu\n",
-      "- **Epochs**: 10\n",
+      "- **Epochs**: 1\n",
       "\n",
       "Training has been completed and the model has been saved.\n",
       "\n"
@@ -486,6 +443,13 @@
     "Training has been completed and the model has been saved.\n",
     "\"\"\".format(device, NUM_EPOCHS))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
