load point data, add buffer functionalities

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -59,6 +59,9 @@
     "# Add the src directory to the sys.path\n",
     "sys.path.append(os.path.abspath('..'))\n",
     "\n",
+    "# Append to sys path to use files in google drive from colab\n",
+    "sys.path.append('/content/drive/MyDrive/Secret_Runway_Detection')\n",
+    "\n",
     "# Import functions and constants from train_utils\n",
     "from secret_runway_detection.train_utils import (\n",
     "    TILES_PER_AREA_LEN,\n",
