train on colab v1

--- a/notebooks/eda_runways.ipynb
+++ b/notebooks/eda_runways.ipynb
@@ -86,7 +86,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_96f6aa130df3ffd5967f8cd3d06cbe9c {\n",
+       "                #map_3412a893fa33fe6abc73e5fb37b5d014 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -100,14 +100,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_96f6aa130df3ffd5967f8cd3d06cbe9c&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_3412a893fa33fe6abc73e5fb37b5d014&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_96f6aa130df3ffd5967f8cd3d06cbe9c = L.map(\n",
-       "                &quot;map_96f6aa130df3ffd5967f8cd3d06cbe9c&quot;,\n",
+       "            var map_3412a893fa33fe6abc73e5fb37b5d014 = L.map(\n",
+       "                &quot;map_3412a893fa33fe6abc73e5fb37b5d014&quot;,\n",
        "                {\n",
        "                    center: [-13.129047586991994, -70.0849072195141],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -121,73 +121,73 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_c2a6b29b6da2fc38ac2dcf50432a86d0 = L.tileLayer(\n",
+       "            var tile_layer_f92aac4093ef9d0bd914a615bbe31ce3 = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 19, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_c2a6b29b6da2fc38ac2dcf50432a86d0.addTo(map_96f6aa130df3ffd5967f8cd3d06cbe9c);\n",
+       "            tile_layer_f92aac4093ef9d0bd914a615bbe31ce3.addTo(map_3412a893fa33fe6abc73e5fb37b5d014);\n",
        "        \n",
        "    \n",
-       "            var tile_layer_9a7ef774201ecf8ad4ba287aab05f7b1 = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1/projects/464231190888/maps/6b774990431c56ef66cad45c2fa9a88c-6d9fdf624044a93f9cd3e67d8f8f5a66/tiles/{z}/{x}/{y}&quot;,\n",
+       "            var tile_layer_0dc338f1e856324f4d4a31c653336e8d = L.tileLayer(\n",
+       "                &quot;https://earthengine.googleapis.com/v1/projects/464231190888/maps/3367b3e306c9e8f5adf829b04ee5c436-2bbe9208a18f484834a555e0cbad3109/tiles/{z}/{x}/{y}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_9a7ef774201ecf8ad4ba287aab05f7b1.addTo(map_96f6aa130df3ffd5967f8cd3d06cbe9c);\n",
+       "            tile_layer_0dc338f1e856324f4d4a31c653336e8d.addTo(map_3412a893fa33fe6abc73e5fb37b5d014);\n",
        "        \n",
        "    \n",
-       "        function geo_json_334735b5397748e408e85822b670a5dd_styler(feature) {\n",
+       "        function geo_json_61361b5c5c98f00d98516062936c8504_styler(feature) {\n",
        "            switch(feature.id) {\n",
        "                default:\n",
        "                    return {&quot;color&quot;: &quot;red&quot;, &quot;weight&quot;: 2};\n",
        "            }\n",
        "        }\n",
        "\n",
-       "        function geo_json_334735b5397748e408e85822b670a5dd_onEachFeature(feature, layer) {\n",
+       "        function geo_json_61361b5c5c98f00d98516062936c8504_onEachFeature(feature, layer) {\n",
        "            layer.on({\n",
        "            });\n",
        "        };\n",
-       "        var geo_json_334735b5397748e408e85822b670a5dd = L.geoJson(null, {\n",
-       "                onEachFeature: geo_json_334735b5397748e408e85822b670a5dd_onEachFeature,\n",
+       "        var geo_json_61361b5c5c98f00d98516062936c8504 = L.geoJson(null, {\n",
+       "                onEachFeature: geo_json_61361b5c5c98f00d98516062936c8504_onEachFeature,\n",
        "            \n",
-       "                style: geo_json_334735b5397748e408e85822b670a5dd_styler,\n",
+       "                style: geo_json_61361b5c5c98f00d98516062936c8504_styler,\n",
        "        });\n",
        "\n",
-       "        function geo_json_334735b5397748e408e85822b670a5dd_add (data) {\n",
-       "            geo_json_334735b5397748e408e85822b670a5dd\n",
+       "        function geo_json_61361b5c5c98f00d98516062936c8504_add (data) {\n",
+       "            geo_json_61361b5c5c98f00d98516062936c8504\n",
        "                .addData(data);\n",
        "        }\n",
-       "            geo_json_334735b5397748e408e85822b670a5dd_add({&quot;features&quot;: [{&quot;geometry&quot;: {&quot;coordinates&quot;: [[-70.08928656863503, -13.129844039931504], [-70.08052787039317, -13.128251134052485], [-70.08052787039317, -13.128251134052485]], &quot;type&quot;: &quot;LineString&quot;}, &quot;id&quot;: &quot;0&quot;, &quot;type&quot;: &quot;Feature&quot;}], &quot;type&quot;: &quot;FeatureCollection&quot;});\n",
+       "            geo_json_61361b5c5c98f00d98516062936c8504_add({&quot;features&quot;: [{&quot;geometry&quot;: {&quot;coordinates&quot;: [[-70.08928656863503, -13.129844039931504], [-70.08052787039317, -13.128251134052485], [-70.08052787039317, -13.128251134052485]], &quot;type&quot;: &quot;LineString&quot;}, &quot;id&quot;: &quot;0&quot;, &quot;type&quot;: &quot;Feature&quot;}], &quot;type&quot;: &quot;FeatureCollection&quot;});\n",
        "\n",
        "        \n",
        "    \n",
-       "            geo_json_334735b5397748e408e85822b670a5dd.addTo(map_96f6aa130df3ffd5967f8cd3d06cbe9c);\n",
+       "            geo_json_61361b5c5c98f00d98516062936c8504.addTo(map_3412a893fa33fe6abc73e5fb37b5d014);\n",
        "        \n",
        "    \n",
-       "            var layer_control_b1daafe878b859ffa0b21af01d9a706a_layers = {\n",
+       "            var layer_control_09fe7993570e11ed8323e8f5e1aaec30_layers = {\n",
        "                base_layers : {\n",
-       "                    &quot;openstreetmap&quot; : tile_layer_c2a6b29b6da2fc38ac2dcf50432a86d0,\n",
+       "                    &quot;openstreetmap&quot; : tile_layer_f92aac4093ef9d0bd914a615bbe31ce3,\n",
        "                },\n",
        "                overlays :  {\n",
-       "                    &quot;Sentinel-2&quot; : tile_layer_9a7ef774201ecf8ad4ba287aab05f7b1,\n",
-       "                    &quot;Runway&quot; : geo_json_334735b5397748e408e85822b670a5dd,\n",
+       "                    &quot;Sentinel-2&quot; : tile_layer_0dc338f1e856324f4d4a31c653336e8d,\n",
+       "                    &quot;Runway&quot; : geo_json_61361b5c5c98f00d98516062936c8504,\n",
        "                },\n",
        "            };\n",
-       "            let layer_control_b1daafe878b859ffa0b21af01d9a706a = L.control.layers(\n",
-       "                layer_control_b1daafe878b859ffa0b21af01d9a706a_layers.base_layers,\n",
-       "                layer_control_b1daafe878b859ffa0b21af01d9a706a_layers.overlays,\n",
+       "            let layer_control_09fe7993570e11ed8323e8f5e1aaec30 = L.control.layers(\n",
+       "                layer_control_09fe7993570e11ed8323e8f5e1aaec30_layers.base_layers,\n",
+       "                layer_control_09fe7993570e11ed8323e8f5e1aaec30_layers.overlays,\n",
        "                {&quot;autoZIndex&quot;: true, &quot;collapsed&quot;: true, &quot;position&quot;: &quot;topright&quot;}\n",
-       "            ).addTo(map_96f6aa130df3ffd5967f8cd3d06cbe9c);\n",
+       "            ).addTo(map_3412a893fa33fe6abc73e5fb37b5d014);\n",
        "\n",
        "        \n",
        "&lt;/script&gt;\n",
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x73045394df10>"
+       "<folium.folium.Map at 0x75adf0136720>"
       ]
      },
      "metadata": {},
@@ -649,7 +649,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4123112/3548578260.py:111: UserWarning: Legend does not support handles for PatchCollection instances.\n",
+      "/tmp/ipykernel_483554/3548578260.py:111: UserWarning: Legend does not support handles for PatchCollection instances.\n",
       "See: https://matplotlib.org/stable/tutorials/intermediate/legend_guide.html#implementing-a-custom-legend-handler\n",
       "  plt.legend()\n"
      ]
@@ -824,102 +824,6 @@
     "- Apply the model to test AOIs to predict runways.\n",
     "- Generate a reduced submission file (~200,000 rows) based on predictions, focusing on detected runways and their buffer regions.\n",
     "\"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AOI: aoi_2021_04.shp\n",
-      "Width: 15410.0 meters\n",
-      "Height: 15270.0 meters\n",
-      "Width: 1715441200.0 degrees longitude\n",
-      "Height: 1699856400.0 degrees latitude\n",
-      "\n",
-      "AOI: aoi_2022_01.shp\n",
-      "Width: 15410.0 meters\n",
-      "Height: 15270.0 meters\n",
-      "Width: 1715441200.0 degrees longitude\n",
-      "Height: 1699856400.0 degrees latitude\n",
-      "\n",
-      "AOI: aoi_2024_01.shp\n",
-      "Width: 15410.0 meters\n",
-      "Height: 15270.0 meters\n",
-      "Width: 1715441200.0 degrees longitude\n",
-      "Height: 1699856400.0 degrees latitude\n",
-      "\n",
-      "AOI: aoi_2020_02.shp\n",
-      "Width: 15410.0 meters\n",
-      "Height: 15270.0 meters\n",
-      "Width: 1715441200.0 degrees longitude\n",
-      "Height: 1699856400.0 degrees latitude\n",
-      "\n",
-      "AOI: aoi_2021_01.shp\n",
-      "Width: 15410.0 meters\n",
-      "Height: 15250.0 meters\n",
-      "Width: 1715441200.0 degrees longitude\n",
-      "Height: 1697630000.0 degrees latitude\n",
-      "\n",
-      "AOI: aoi_2020_03.shp\n",
-      "Width: 15410.0 meters\n",
-      "Height: 15270.0 meters\n",
-      "Width: 1715441200.0 degrees longitude\n",
-      "Height: 1699856400.0 degrees latitude\n",
-      "\n",
-      "AOI: aoi_2020_01.shp\n",
-      "Width: 15410.0 meters\n",
-      "Height: 15270.0 meters\n",
-      "Width: 1715441200.0 degrees longitude\n",
-      "Height: 1699856400.0 degrees latitude\n",
-      "\n",
-      "AOI: aoi_2022_02.shp\n",
-      "Width: 15410.0 meters\n",
-      "Height: 15270.0 meters\n",
-      "Width: 1715441200.0 degrees longitude\n",
-      "Height: 1699856400.0 degrees latitude\n",
-      "\n",
-      "AOI: aoi_2023_01.shp\n",
-      "Width: 15410.0 meters\n",
-      "Height: 15270.0 meters\n",
-      "Width: 1715441200.0 degrees longitude\n",
-      "Height: 1699856400.0 degrees latitude\n",
-      "\n",
-      "AOI: aoi_2021_03.shp\n",
-      "Width: 15410.0 meters\n",
-      "Height: 15270.0 meters\n",
-      "Width: 1715441200.0 degrees longitude\n",
-      "Height: 1699856400.0 degrees latitude\n",
-      "\n",
-      "AOI: aoi_2021_02.shp\n",
-      "Width: 15410.0 meters\n",
-      "Height: 15250.0 meters\n",
-      "Width: 1715441200.0 degrees longitude\n",
-      "Height: 1697630000.0 degrees latitude\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Check AOI dims both in meters and in longitude/latitude\n",
-    "# Check if test AOIs are square in meters or in longitude/latitude or neither\n",
-    "# TODO make logic nice\n",
-    "\n",
-    "for aoi in test_shapefiles:\n",
-    "    aoi_gdf = gpd.read_file(os.path.join(test_shapefiles_dir, aoi))\n",
-    "    aoi_bounds = aoi_gdf.total_bounds\n",
-    "    aoi_width = aoi_bounds[2] - aoi_bounds[0]\n",
-    "    aoi_height = aoi_bounds[3] - aoi_bounds[1]\n",
-    "    print(f\"AOI: {aoi}\")\n",
-    "    print(f\"Width: {aoi_width} meters\")\n",
-    "    print(f\"Height: {aoi_height} meters\")\n",
-    "    print(f\"Width: {aoi_width * 111320} degrees longitude\")\n",
-    "    print(f\"Height: {aoi_height * 111320} degrees latitude\")\n",
-    "    print()"
    ]
   }
  ],
